[gd_scene load_steps=7 format=3 uid="uid://bttaj8jiwmjv6"]

[ext_resource type="Shader" path="res://shaders/spatial shaders/fog-shader-alpha.gdshader" id="1_8a34a"]
[ext_resource type="Script" path="res://scripts/objects/interaction_symbol.gd" id="1_d3jj7"]
[ext_resource type="Texture2D" uid="uid://d07uqvqx48ugo" path="res://graphics/sprites/objects/interaction.png" id="2_6yoqe"]
[ext_resource type="AudioStream" uid="uid://cokbp5ew0dhdr" path="res://sfx/textbox/interactpopup.wav" id="4_0xbfh"]

[sub_resource type="QuadMesh" id="QuadMesh_pbefp"]
center_offset = Vector3(0, 0.5, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ufk43"]
render_priority = 0
shader = ExtResource("1_8a34a")
shader_parameter/modulate_color = Color(1, 1, 1, 1)
shader_parameter/transparent_color = Color(1, 0, 1, 1)
shader_parameter/albedoTex = ExtResource("2_6yoqe")

[node name="interaction" type="Node3D"]
script = ExtResource("1_d3jj7")

[node name="height_offset" type="Node3D" parent="."]

[node name="float_root" type="Node3D" parent="height_offset"]

[node name="interaction_mesh" type="MeshInstance3D" parent="height_offset/float_root"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
mesh = SubResource("QuadMesh_pbefp")
skeleton = NodePath("../../..")
surface_material_override/0 = SubResource("ShaderMaterial_ufk43")

[node name="interaction_sound" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
stream = ExtResource("4_0xbfh")
volume_db = 5.0
panning_strength = 4.0
bus = &"SFX"
